--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.6.5
 blinker==1.5
 click==8.1.3
 Flask==2.2.2
@@ -9,8 +10,13 @@ Jinja2==3.1.2
 joblib==1.2.0
 MarkupSafe==2.1.1
 numpy==1.23.3
+pandas==1.5.0
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+pytz==2022.4
 scikit-learn==1.1.2
 scipy==1.9.1
+six==1.16.0
 sklearn==0.0
 threadpoolctl==3.1.0
 Werkzeug==2.2.2
